k8s/auth/service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  internalTrafficPolicy: Local
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: auth
# spec:
#   selector:
#     app: auth
#   type: NodePort
#   ports:
#   - name: port1
#     port: 80
#     targetPort: 80
#     nodePort: 31080
#     protocol: TCP
