k8s/auth/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-service
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/auth"
        backend:
          service:
            name: auth
            port:
              number: 80
